<resources>
    <string name="app_name">Chasing Ukraine</string>
    <string name="etDescription">Type your description</string>
    <string name="bSubmit">Submit description</string>
    <string name="tvDescription">   The national park Bugski Guard lies in the picturesque valley of the Southern Bug in the Mykolaiv region. It was created quite recently, in 2009, in order to preserve the unique nature and historic-cultural landmarks of southern Ukraine. Soon after it was built, the park gained the status of one of the Seven Wonders of Ukraine.

The territory of the Bugski Guard is one of the oldest dry land sites in Eurasia, which has not been touched by the sea for over 60 million years. During this time, the most talented sculptor - nature - diligently worked on the amazing landscapes of the park: canyons, rocky river banks, on which (just like millions of years ago) live hundreds of rare animal species and grow unique plants. Many of these species are in the Red Book of Ukraine and the European Red List, which catalogue endangered animal species.

Beside its natural significance, the Bugski Guard also has an important history. In earlier times, for example, the borders of Zaporozhye, Turkey, and Poland met on the parks territory. Three fortresses stood here, gazing menacingly at each other: the Zaporizhian Orlyk, the Turkish Golta, and the Polish Bogopol.

One of the most interesting features of the Bugski Guard is the Aktovsky canyon - the only one in Europe whose contours resemble the shapes of the famous North American canyons. It is a unique natural habitat of forest and water ecosystems that supplements the massive duet of peculiar rocks and granite boulders. Herodotus called it the abyss in the middle of the bare steppe, the granite chasm in the crystal shield, on the bottom of which the Exampei stream purls.

Exampei is the ancient name of the Mertvovod River (literally translated as the river of dead water) that flows among rocks deep in the Aktovsky canyon. One legend claims that during the Tatar raids on these territories, the locals prepared a poisoned soup and poured it into the river near the invaders camp, killing many of them. According to another legend, the river got such an unusual name after the bloody battle between Cossacks and Turks. After the battle, the river was so full of dead bodies, that one could not even see the water flowing. Yet another legend claims that the rivers name has carried over from the Scythians, who used to send their dead on their final voyage down the Mertvovod.

Today, Bugski Guard is a real magnet for tourists, photographers, and lovers of extreme sports. One of Europes most popular rapids for whitewater rafting is located here. And mountain and rock climbers have chosen the Aktovsky canyon walls as a training ground.

Getting here: It is best to book tours to the park in Mykolaivs tourist agencies. You may also get to the Bugski Guard on your own by driving from Mykolaiv to the village Migiya, located near the park.</string>
    <string name="type">type</string>
    <string name="typeVal">River canyon</string>
    <string name="location">location</string>
    <string name="locationVal">Mykolaivska oblast\'</string>
</resources>
